Added Full Code gen

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,6 +1,11 @@
 <h2>Rescript Code Generator</h2>
 <button id="generate">Generate</button>
 <button id="close">Close</button>
+<div id="code_interface">
+<script src='http://lovasoa.github.io/tidy-html5/tidy.js'></script>
+
+
+</div>
 <script>
 
 document.getElementById('generate').onclick = () => {
